Follow TCP Stream and click reassembled content moves you to incorrect current packet
This issue was migrated from bug 14898 in our old bug tracker.
Original bug information:
Reporter: Jacob Burckhardt
Status: RESOLVED FIXED
Product: Wireshark
Component: Qt UI
OS: Linux
Platform: x86
Version: 2.6.1
Attachments:
wireshark_bug_follow_stream_click_1111_and_it_moves_to_wrong_pkt.pcap: capture file you can use to reproduce the bug