tcp: ignore zero-length payloads for Follow TCP Stream

In the Qt Follow TCP Stream dialog with the ASCII mode, sometimes
selecting the first few bytes would wrongly select a packet with a
higher frame number.

This happens because Qt iterates through the list of payloads, then
stores appends the payload data and maps the new cursor position to the
packet number. If the payload data was empty, then it would overwrite
previous cursor positions.

To fix this, do not add records for empty TCP payloads.

Bug: 14898
Change-Id: I598d73899b56eac3d2a022f108bf097bdd363b5c
Reviewed-on: https://code.wireshark.org/review/28613
Petri-Dish: Peter Wu <peter@lekensteyn.nl>
Tested-by: Petri Dish Buildbot
Reviewed-by: Anders Broman <a.broman58@gmail.com>
(cherry picked from commit 59192f79fc226b77ef71b9012e0e867002882aaf)
Reviewed-on: https://code.wireshark.org/review/28646
Reviewed-by: Peter Wu <peter@lekensteyn.nl>